--- a/resources/css/sidebar/_sidebar.scss
+++ b/resources/css/sidebar/_sidebar.scss
@@ -312,7 +312,7 @@
 
 
 #sidebar.dark{
-    background-color: rgba(18, 28, 53, 1);
+    background-color: rgba(28, 29, 35, 1);
 
     ul{
         li{
@@ -354,7 +354,7 @@
             a{
                 background:none ;
                 &::after{
-                    background: rgba(14, 22, 46, 1);
+                    background: rgb(43, 44, 53);
                     opacity: 1;
                 }
 
