--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -3,6 +3,7 @@
 @import './sidebar/sidebar';
 @import './IndexPage/IndexPage';
 @import './responsive/responsive';
+@import './CompitionsPage/CompitionsPage';
 
 
 
