--- a/resources/css/IndexPage/_BottomArea.scss
+++ b/resources/css/IndexPage/_BottomArea.scss
@@ -1128,7 +1128,7 @@
 
                                 color: rgba(240, 97, 17, 1);
 
-                                &:hover{
+                                &:hover {
                                     color: #ffffff;
                                 }
 
@@ -1204,7 +1204,7 @@
                                     width: 1.9rem;
                                 }
 
-                                &:hover{
+                                &:hover {
                                     color: #ffffff;
                                 }
                             }
@@ -1288,7 +1288,7 @@
                                     width: 1.9rem;
                                 }
 
-                                &:hover{
+                                &:hover {
                                     color: #ffffff;
                                 }
                             }
@@ -1422,9 +1422,9 @@
                                 border-bottom: .1rem solid rgba(0, 0, 0, 0.05);
 
                                 td {
-                                    padding: 1.5rem.7rem;
+                                    padding: 1.5rem .2rem;
                                     text-align: center;
-                                    font-size: 1.3rem;
+                                    font-size: 1.5rem;
 
                                     div {
                                         display: flex;
@@ -1432,23 +1432,23 @@
                                         font-weight: 500;
 
                                         img {
-                                            width: 2.5rem !important;
-                                            margin-right: .9rem;
+                                            width: 2rem !important;
+                                            margin-right: .5rem;
                                         }
 
                                         img.small {
-                                            width: 2.8rem;
-                                            margin-right: 0.7rem;
+                                            width: 2rem;
+                                            margin-right: 0.5rem;
                                         }
 
                                         .arrow {
-                                            width: 1.4rem;
-                                            margin-right: 0.6rem;
+                                            width: 1.2rem;
+                                            margin-right: 0.4rem;
                                         }
 
                                         span {
                                             font-weight: 500;
-                                            font-size: 1.2rem;
+                                            font-size: 1.3rem;
                                         }
 
                                     }
@@ -1456,13 +1456,13 @@
                                     .badge {
                                         color: rgba(240, 97, 17, 1);
                                         background-color: rgba(240, 97, 17, 0.1);
-                                        padding: .7rem 1rem;
+                                        padding: .7rem .9rem;
                                         border-radius: .3rem;
                                         -webkit-border-radius: .3rem;
                                         -moz-border-radius: .3rem;
                                         -ms-border-radius: .3rem;
                                         -o-border-radius: .3rem;
-                                        font-size: 1.4rem;
+                                        font-size: 1.3rem;
                                     }
                                 }
                             }
@@ -1572,12 +1572,12 @@
                         flex-wrap: wrap;
 
                         .singleItem {
-                            width: 49%;
-                            padding: 1rem;
+                            width: 32.5%;
+                            padding: .7rem;
                             background-color: #fff;
                             display: flex;
                             justify-content: space-between;
-                            margin-bottom: 1.6rem;
+                            margin-bottom: 1rem;
                             border-radius: 1rem;
                             -webkit-border-radius: 1rem;
                             -moz-border-radius: 1rem;
@@ -1585,9 +1585,9 @@
                             -o-border-radius: 1rem;
 
                             img {
-                                width: 7rem;
+                                width: 5rem;
                                 height: auto;
-                                margin-right: 2rem;
+                                margin-right: 1rem;
                             }
 
                             .right {
